--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
   },
   "homepage": "https://github.com/dreydain/Model_Trains#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.12"
+  },
+  "devDependencies": {
+    "concurrently": "^6.3.0",
+    "nodemon": "^2.0.15"
   }
 }
