adjusted cors, re-added proxy, created user register screen and form container component

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "model_trains",
   "version": "1.0.0",
   "description": "TJ model train business manager",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
