--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,19 +8,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.0.2",
+    "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
     "web-vitals": "^1.1.2"
-  },
-  "devDependencies": {
-    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
